change hashtags size on smaller screens to fix page movement; change in photo caption

--- a/frontend/app/src/sections/css/Footer.css
+++ b/frontend/app/src/sections/css/Footer.css
@@ -35,6 +35,13 @@
     font-size: 14px;
 }
 
+@media screen and (max-width: 480px) {
+    .all-rights-reserved {
+        margin-top: 5px;
+        font-size: 12px;
+    }
+}
+
 @media screen and (max-width: 780px) {
     .footer .col-12 {
         text-align: center;
