--- a/frontend/app/src/sections/css/InfoContent.css
+++ b/frontend/app/src/sections/css/InfoContent.css
@@ -117,7 +117,7 @@ h1, h2 {
   }
 
   .header {
-    font-size: 28px;
+    font-size: 26px;
   }
 
   .sub-highlight {
@@ -125,7 +125,7 @@ h1, h2 {
   }
 
   .hashtags {
-    font-size: 16px;
+    font-size: 12px;
   }
 
   .content {
@@ -158,7 +158,6 @@ h1, h2 {
    .hashtags{
         display: flex;
         flex-direction: column;
-        font-size: 18px;
         align-items: center;
     }
 
@@ -170,6 +169,12 @@ h1, h2 {
 
     .playlist .icon{
       display: flex;
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 992px) {
+     .hashtags{
+        font-size: 18px;
     }
 }
 
